11_traffic-management/11.12/ratelimit_global_envoyfilter_port.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: global-ratelimit-svc
spec:
  workloadSelector:
    labels:
      app: advertisement
  configPatches:
    - applyTo: VIRTUAL_HOST
      match:
        context: SIDECAR_INBOUND
        routeConfiguration:
          vhost:
            name: ""
            route:
              action: ANY
      patch:
        operation: MERGE
        value:
          rate_limits:
            - actions: 
              - request_headers:
                  header_name: ":path"
                  descriptor_key: "PATH"
